--- a/resources/scss/base/_mixins.scss
+++ b/resources/scss/base/_mixins.scss
@@ -11,3 +11,18 @@
     font-size: $size;
     line-height: $height;
 }
+@mixin laptop{
+    @media (min-width: 1440px) {
+        @content;
+    }
+}
+@mixin tablet{
+    @media (min-width: 768px) and (max-width: 1439px) {
+        @content;
+    }
+}
+@mixin phone{
+    @media (max-width: 767px) {
+        @content;
+    }
+}
