--- a/resources/scss/content/_catalog.scss
+++ b/resources/scss/content/_catalog.scss
@@ -12,23 +12,60 @@
     width: 1110rem;
     height: 1564rem;
     left: 165rem;
+    @include mixins.tablet{
+        left: 0rem;
+        width: 690rem;
+        height: 2323rem;
 
+    }
+    @include mixins.phone{
+        width: 510rem;
+        height: 1709rem;
+        left: 0rem;
+
+
+        gap: 20px;
+
+
+    }
     &__tabs {
         @include mixins.flex(row, space-between, flex-start);
         // gap: 30rem;
 
         width: 1110rem;
         height: 44rem;
+        @include mixins.tablet{
+            width: 690rem;
+            height: 43rem;
+
+        }
+        @include mixins.phone{
+            flex-direction: column;
+            width: 408rem;
+            height: 87rem;
+
+        }
         &__span {
             width: 255rem;
             height: 44rem;
-
             color: #2C2D35;
             @include mixins.font('Raleway', 500, 40rem, 110%);
+
+            @include mixins.tablet{
+                width: 194rem;
+                height: 33rem;
+                @include mixins.font('Raleway', 500, 30rem, 110%);
+
+            }
+            @include mixins.phone{
+                width: 194rem;
+                height: 33rem;
+                @include mixins.font('Raleway', 500, 24rem, 110%);
+
+            }
         }
         &__buttons {
             @include mixins.flex(row, space-between, flex-start);
-            // gap: 32rem;
 
             width: 428rem;
             height: 43rem;
@@ -37,6 +74,15 @@
             order: 1;
             flex-grow: 0;
 
+            @include mixins.tablet{
+                width: 433rem;
+                height: 43rem;
+            }
+            @include mixins.phone{
+                width: 408rem;
+                height: 41rem;
+
+            }
         }
         &__btn {
             @include mixins.flex(row, center, center);
@@ -58,6 +104,17 @@
         flex: none;
         order: 1;
         flex-grow: 0;
+        @include mixins.tablet{
+            width: 690rem;
+            height: 2250rem;
+
+
+        }
+        @include mixins.phone{
+            width: 510rem;
+            height: 1602rem;
+
+        }
 
     }
 }
