--- a/resources/scss/footer/_footer.scss
+++ b/resources/scss/footer/_footer.scss
@@ -12,16 +12,48 @@
     background: #E1EDE6;
     @include mixins.flex(row, center, none);
 
+    @include mixins.tablet{
+        width: 768rem;
+        height: 250rem;
+    }
+    @include mixins.phone{
+        width: 576rem;
+        height: 319rem;
+    }
+
     &__content {
         @include mixins.flex(row, space-between, none);
         width: 978rem;
+        @include mixins.tablet{
+            @include mixins.flex(row, flex-start, none);
+            flex-wrap: wrap;
+            padding: 0 39rem;
+            row-gap: 30rem;
+            column-gap: 75rem;
+        }
+        @include mixins.phone{
+            @include mixins.flex(row, center, none);
+            flex-wrap: wrap;
+            padding: 0 39rem;
+            row-gap: 30rem;
+            column-gap: 75rem;
+        }
     }
     &__info {
         height: 122rem;
         width: 170rem;
-        // display: block;
         @include mixins.flex(column, space-between, none);
 
+        @include mixins.tablet{
+            @include mixins.flex(row, space-between, none);
+            width: 690rem;
+            height: 52rem;
+        }
+        @include mixins.phone{
+            @include mixins.flex(row, space-between, none);
+            width: 510rem;
+            height: 50rem;
+        }
     }
     &__logo {
         width: 143rem;
@@ -45,6 +77,17 @@
             flex: none;
             order: 0;
             flex-grow: 0;
+
+            @include mixins.phone{
+                width: 176rem;
+                height: 14rem;
+            }
+        }
+        @include mixins.phone{
+            @include mixins.flex(column, center, center);
+
+            width: 176rem;
+            height: 48rem;
         }
     }
     &__social {
